--- a/ListaTelefonica/index.html
+++ b/ListaTelefonica/index.html
@@ -4,16 +4,27 @@
         <title>Lista Telefônica</title>
         <meta charset="UTF-8">
         <link rel="stylesheet" type="text/css" href="lib/bootstrap/bootstrap.css">
-        <link rel="stylesheet" type="text/css" href="css/app.css">
+        <link rel="stylesheet" type="text/css" href="css/app.css">        
+		<link rel="stylesheet" type="text/css" href="css/ui.css">
+
         <script src="lib/angular/angular.js"></script>
         <script src="lib/angular/angular-messages.js"></script>
         <script src="lib/angular/angular-locale_pt-br.js"></script>
         <script src="js/app.js"></script>
         <script src="js/controllers/listaTelefonicaCtrl.js"></script>
+		<script src="js/filters/nameFilter.js"></script>		
+		<script src="js/filters/ellipsisFilter.js"></script>		
+		<script src="js/directives/uiAlertDirective.js"></script>
+		<script src="js/directives/uiDateDirective.js"></script>
     </head>
     <body ng-controller="listaTelefonicaCtrl">
         <div class="jumbotron">
             <h3>{{app}}</h3>
+			
+			<div ui-alert></div>
+			
+			
+			
             <input type="text" ng-model="busca" class="form-control" placeholder="O que você está buscando?">
             <table class="table" ng-show="contatos.length > 0">
                 <tr>
@@ -26,9 +37,9 @@
                 </tr>
                 <tr ng-class="{'selecionado negrito': contato.selecionado}" ng-repeat="contato in contatos | filter:busca | orderBy:ordenacao:direcaoDaOrdenacao" >
                     <td><input type="checkbox" ng-model="contato.selecionado"/></td>
-                    <td>{{contato.nome}}</td>
+                    <td class="text-align-right">{{contato.nome | name | ellipsis:10}}</td>
                     <td>{{contato.telefone}}</td>
-                    <td>{{contato.operadora.nome | lowercase}}</td>
+                    <td>{{contato.operadora.nome}}</td>
                     <td>{{contato.data | date:'dd/MM/yyyy HH:mm'}}</td>
                     <td><div style="width: 20px; height: 20px;" ng-style="{'background-color': contato.cor}"></div></td>
                 </tr>
@@ -37,6 +48,7 @@
             <form name="contatoForm">
                 <input class="form-control" type="text" ng-model="contato.nome" name="nome" placeholder="Nome" ng-required="true" ng-minlength="10"/>
                 <input class="form-control" type="text" ng-model="contato.telefone" name="telefone" placeholder="Telefone" ng-required="true" ng-pattern="/^\d{4,5}-\d{4}$/"/>
+				<input class="form-control" type="text" ng-model="contato.data" name="data" placeholder="Data" ui-date />
                 <select class="form-control" ng-model="contato.operadora" ng-options="operadora.nome + '(' + (operadora.preco | currency) + ')' for operadora in operadoras | orderBy: 'nome'" >
                     <option value="">Selecione uma operadora</option>
                 </select>
